# MAINTAI_MVP_DEMO

./: .gitignore  AGENTS.md  Algoritmo planning.md  CHANGELOG.md  CLAUDE.md  DESKTOP.md  FUNZIONALITA.txt  MaintAI_Architettura_Tecnica_v3.3.1.docx  Piano operativo MaintAI in 10 step.docx  ROADMAP_PMI.md  SAAS_READINESS_2026-05-31.md  SECURITY.md  SECURITY_CHECKLIST_VERIFICATION_2026-05-31.md  SECURITY_GUIDELINES.md  SECURITY_STABILITY_AUDIT_2026-05-31.md  STRICT_ISO_CYBER_STABILITY_AUDIT_REPORT.md  STRUTTURA_PROGETTO.txt  alembic.ini  architecture.md  avvia_backend.bat  clean_cat.py  design_system_v3.md  directive.md  fix_trans.py  force_setup.py  generate_doc.py  launch-desktop.vbs  miglioramenti.md  migrate_weather.py  planning_directive.md  quick_actions_map.md  recreate_db.py  render.yaml  reset_db.py  risolutore_codex.md  roadmap.md  seed_demo.py  seed_demo_data.py  test_api_login.py  test_db_status.py  (+9 more)
.claude/: settings.local.json
alembic/: env.py
backend/: .env.example  demo_data.py  main.py  requirements.txt  update_manifest.json
docs/: COMPLIANCE_ISO27001_27002_NIS2.md  INCIDENT_RESPONSE.md  SECURITY_AUDIT_2026-05-30.md  SECURITY_AUDIT_2026-06-08.md  SECURITY_CHECKLIST.md  SECURITY_GUIDELINES_MAINTAI.md  architecture.md  deploy_cloud.md  directive.md  llm_planning_prompt.md  planner_design.md  planner_policy.yaml  planner_weights.json  (+8 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/.cargo/: config.toml
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
(+353 files in other folders)
