[package]
name = "maintai-desktop"
version = "2.7.0"
description = "MaintAI Desktop — Gestione Manutenzione Industriale AI-powered"
authors = ["MaintAI"]
license = "UNLICENSED"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "maintai_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
